--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h5>A Simple Calendar App for Scheduling Your Workday</h5>
         </div>
         <div class="row justify-content-center" id="date-today">
-            <h6></h6>
+            <h6>??</h6>
         </div>
 
         <div class="container">
@@ -98,6 +98,19 @@
                 <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
             </div>
 
+            <div id="calendar-row10" class="row justify-content-md-center border-top border-bottom calendar-row">
+                <div id="time11"class="col-md-1">
+                    6 PM
+                </div>
+                <textarea rows="3" id="text-entry10" class="col-md-10"></textarea>
+                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <footer class="row">
+                <br><br>
+            </footer>
         </div>
     </header>
     
