--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Becc's Workday Scheduler</title>
+
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
     <header class="container-fluid border-bottom border-dark mb-2">
