--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <script src="https://kit.fontawesome.com/5a5521531b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="container-fluid border-bottom border-dark mb-2">
@@ -17,7 +18,7 @@
             <h5>A Simple Calendar App for Scheduling Your Workday</h5>
         </div>
         <div class="row justify-content-center" id="date-today">
-            <h6>??</h6>
+            <h6>????</h6>
         </div>
     </header>
 
