--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h5>A Simple Calendar App for Scheduling Your Workday</h5>
         </div>
         <div class="row justify-content-center" id="date-today">
-            <h6>????</h6>
+            <h6>day-date-time</h6>
         </div>
     </header>
 
@@ -107,7 +107,7 @@
                 <div id="time11"class="col-md-1">
                     6 PM
                 </div>
-                <textarea rows="3" id="text-entry10" class="col-md-10"></textarea>
+                <textarea rows="3" id="text-entry11" class="col-md-10"></textarea>
                 <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
             </div>
         </div>
@@ -120,6 +120,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
-
+        <script src="./assets/js/script.js"></script>
 </body>
 </html>
