--- a/index.html
+++ b/index.html
@@ -1,125 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Becc's Workday Scheduler</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Becc's Workday Scheduler</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <script src="https://kit.fontawesome.com/5a5521531b.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header class="container-fluid border-bottom border-dark mb-2">
-        <div class="row justify-content-center">
-            <h1>Becc's Workday Scheduler</h1>
-        </div>
-        <div class="row justify-content-center">
-            <h5>A Simple Calendar App for Scheduling Your Workday</h5>
-        </div>
-        <div class="row justify-content-center" id="date-today">
-            <h6>day-date-time</h6>
-        </div>
-    </header>
+        <!-- Bootstrap & Style Sheet Links-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+        <script src="https://kit.fontawesome.com/5a5521531b.js" crossorigin="anonymous"></script>
+    </head>
 
-        <div class="container">
-            <div id="calendar-row1" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time1"class="col-md-1">
-                    8 AM
+    <body>
+
+        <header class="container-fluid border-bottom border-dark mb-2">
+            <div class="row justify-content-center">
+                <h1>Becc's Workday Scheduler</h1>
+            </div>
+            <div class="row justify-content-center">
+                <h5>A Simple Calendar App for Scheduling Your Workday</h5>
+            </div>
+            <div class="row justify-content-center" id="date-today">
+                <h6>day-date-time</h6>
+            </div>
+        </header>
+            <!-- Hour Buckets -->
+            <div class="container">
+                <div id="row1" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time1"class="col-md-1">
+                        8 AM
+                    </div>
+                    <textarea rows="3" id="text-entry1" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
-                <textarea rows="3" id="text-entry1" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+
+                <div id="row2" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time2"class="col-md-1">
+                        9 AM
+                    </div>
+                    <textarea rows="3" id="text-entry2" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row3" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time3"class="col-md-1">
+                        10 AM
+                    </div>
+                    <textarea rows="3" id="text-entry3" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row4" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time4"class="col-md-1">
+                        11 AM
+                    </div>
+                    <textarea rows="3" id="text-entry4" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row5" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time5"class="col-md-1">
+                        12 PM
+                    </div>
+                    <textarea rows="3" id="text-entry5" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row6" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time6"class="col-md-1 time">
+                        1 PM
+                    </div>
+                    <textarea rows="3" id="text-entry6" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row7" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time7"class="col-md-1 time">
+                        2 PM
+                    </div>
+                    <textarea rows="3" id="text-entry7" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row8" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time8"class="col-md-1">
+                        3 PM
+                    </div>
+                    <textarea rows="3" id="text-entry8" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row9" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time9"class="col-md-1">
+                        4 PM
+                    </div>
+                    <textarea rows="3" id="text-entry9" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row10" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time10"class="col-md-1">
+                        5 PM
+                    </div>
+                    <textarea rows="3" id="text-entry10" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
+
+                <div id="row11" class="row justify-content-md-center border-top border-bottom calendar-row">
+                    <div id="time11"class="col-md-1">
+                        6 PM
+                    </div>
+                    <textarea rows="3" id="text-entry11" class="col-md-10"></textarea>
+                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                </div>
             </div>
 
-            <div id="calendar-row2" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time2"class="col-md-1">
-                    9 AM
-                </div>
-                <textarea rows="3" id="text-entry2" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+            <div class="container-fluid">
+                <footer class="row">
+                    <br><br>
+                </footer>
             </div>
 
-            <div id="calendar-row3" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time3"class="col-md-1">
-                    10 AM
-                </div>
-                <textarea rows="3" id="text-entry3" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row4" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time4"class="col-md-1">
-                    11 AM
-                </div>
-                <textarea rows="3" id="text-entry4" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row5" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time5"class="col-md-1">
-                    12 PM
-                </div>
-                <textarea rows="3" id="text-entry5" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row6" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time6"class="col-md-1 time">
-                    1 PM
-                </div>
-                <textarea rows="3" id="text-entry6" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row7" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time7"class="col-md-1 time">
-                    2 PM
-                </div>
-                <textarea rows="3" id="text-entry7" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row8" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time8"class="col-md-1">
-                    3 PM
-                </div>
-                <textarea rows="3" id="text-entry8" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row9" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time9"class="col-md-1">
-                    4 PM
-                </div>
-                <textarea rows="3" id="text-entry9" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row10" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time10"class="col-md-1">
-                    5 PM
-                </div>
-                <textarea rows="3" id="text-entry10" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-
-            <div id="calendar-row11" class="row justify-content-md-center border-top border-bottom calendar-row">
-                <div id="time11"class="col-md-1">
-                    6 PM
-                </div>
-                <textarea rows="3" id="text-entry11" class="col-md-10"></textarea>
-                <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-            </div>
-        </div>
-
-        <div class="container-fluid">
-            <footer class="row">
-                <br><br>
-            </footer>
-        </div>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
-        <script src="./assets/js/script.js"></script>
-</body>
+            <!-- Jquery / Moment Source Links & Javascript Sheet -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
+            <script src="./assets/js/script.js"></script>
+    </body>
 </html>
