--- a/index.html
+++ b/index.html
@@ -3,115 +3,103 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Becc's Workday Scheduler</title>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <!-- Bootstrap & Style Sheet Links-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-        <script src="https://kit.fontawesome.com/5a5521531b.js" crossorigin="anonymous"></script>
+        <link 
+            rel="stylesheet" 
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+        />
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+            crossorigin="anonymous"
+        />
+        <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+        rel="stylesheet"
+        />
+        <link 
+            rel="stylesheet" href="./assets/css/style.css">
+            <title>Becc's Workday Scheduler</title>
     </head>
 
     <body>
 
-        <header class="container-fluid border-bottom border-dark mb-2">
-            <div class="row justify-content-center">
-                <h1>Becc's Workday Scheduler</h1>
-            </div>
-            <div class="row justify-content-center">
-                <h5>A Simple Calendar App for Scheduling Your Workday</h5>
-            </div>
+        <header class="jumbotron">
+            <h1 class="display-3">Becc's Workday Scheduler</h1>
+            <p class="lead">A simple calendar app for scheduling your work day</p>
             <div class="row justify-content-center" id="date-today">
-                <h6>day-date-time</h6>
+                <h5>day-date-time</h5>
             </div>
         </header>
             <!-- Hour Buckets -->
             <div class="container">
                 <div id="row1" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time1"class="col-md-1">
-                        8 AM
-                    </div>
+                    <div id="time1"class="col-md-1">8 AM</div>
                     <textarea rows="3" id="text-entry1" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row2" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time2"class="col-md-1">
-                        9 AM
-                    </div>
+                    <div id="time2"class="col-md-1">9 AM</div>
                     <textarea rows="3" id="text-entry2" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row3" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time3"class="col-md-1">
-                        10 AM
-                    </div>
+                    <div id="time3"class="col-md-1">10 AM</div>
                     <textarea rows="3" id="text-entry3" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row4" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time4"class="col-md-1">
-                        11 AM
-                    </div>
+                    <div id="time4"class="col-md-1">11 AM</div>
                     <textarea rows="3" id="text-entry4" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row5" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time5"class="col-md-1">
-                        12 PM
-                    </div>
+                    <div id="time5"class="col-md-1">12 PM</div>
                     <textarea rows="3" id="text-entry5" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row6" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time6"class="col-md-1 time">
-                        1 PM
-                    </div>
+                    <div id="time6"class="col-md-1 time">1 PM</div>
                     <textarea rows="3" id="text-entry6" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row7" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time7"class="col-md-1 time">
-                        2 PM
-                    </div>
+                    <div id="time7"class="col-md-1 time">2 PM</div>
                     <textarea rows="3" id="text-entry7" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row8" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time8"class="col-md-1">
-                        3 PM
-                    </div>
+                    <div id="time8"class="col-md-1">3 PM</div>
                     <textarea rows="3" id="text-entry8" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row9" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time9"class="col-md-1">
-                        4 PM
-                    </div>
+                    <div id="time9"class="col-md-1">4 PM</div>
                     <textarea rows="3" id="text-entry9" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row10" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time10"class="col-md-1">
-                        5 PM
-                    </div>
+                    <div id="time10"class="col-md-1">5 PM</div>
                     <textarea rows="3" id="text-entry10" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
 
                 <div id="row11" class="row justify-content-md-center border-top border-bottom calendar-row">
-                    <div id="time11"class="col-md-1">
-                        6 PM
-                    </div>
+                    <div id="time11"class="col-md-1">6 PM</div>
                     <textarea rows="3" id="text-entry11" class="col-md-10"></textarea>
-                    <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+                    <button class="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
                 </div>
             </div>
 
